--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.4",
     "@mui/x-date-pickers": "^7.11.0",
