--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
