--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   },
   "scripts": {
     "build": "react-app-rewired build",
-  "test": "react-app-rewired test",
-  "eject": "react-scripts eject",
-  "client": "react-scripts start",
-  "start": "concurrently \"npm run client\" \"npx json-server --watch db.json --port 3004\""
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject",
+    "client": "react-scripts start",
+    "start": "concurrently \"npm run client\" \"npx json-server --watch db.json --port 3004\""
   },
   "eslintConfig": {
     "extends": [
@@ -59,5 +59,10 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-beta.1"
-  }
+  },
+  "description": "![sketch](https://github.com/user-attachments/assets/4476204a-1cbf-4d22-86ab-8e5f65dbda44)",
+  "main": "config-overrides.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
