--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
+    "sqlite3": "^5.1.7",
     "toastify-js": "^1.12.0",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
@@ -39,7 +40,7 @@
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "client": "react-scripts start",
-    "start": "concurrently \"npm run client\" \"npx json-server --watch db.json --port 3030\""
+    "start": "concurrently \"npm run client\" \"node server.js\""
   },
   "eslintConfig": {
     "extends": [
