--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "axios": "^1.7.2",
     "better-sqlite3": "^11.1.2",
     "dayjs": "^1.11.12",
-    "express": "^4.19.2",
     "my-website": "file:",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
@@ -30,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
+    "sql.js": "^1.11.0",
     "sqlite3": "^5.1.7",
     "toastify-js": "^1.12.0",
     "util": "^0.12.5",
