--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "my-website": "file:",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
